last commit before doing media query

--- a/css/style.css
+++ b/css/style.css
@@ -272,6 +272,9 @@ hr{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    margin-left: 12px;
+    margin-right: 12px;
+    margin-top: 12px;
 }
 
 .course-banner img{
@@ -310,9 +313,15 @@ hr{
 
 .fa-star, .fa-star-half-alt{
     color: #FFC014;
+    margin-left: -3px;
 }
+
+.course-star-rating{
+    margin-right: 10px;
+}
+
 .course-number-rating{
-    margin-left: 10px;
+    margin-left: -9px;
     color: #A2A2A2;
     font-size: 14px;
     font-family: 'Poppins';
