--- a/css/style.css
+++ b/css/style.css
@@ -393,8 +393,8 @@ header{
 
 section{
     width: 90%;
-    margin-left: 5%;
-    margin-right: 5%;
+    margin-left: auto;
+    margin-right: auto;
     
 
 }
@@ -405,6 +405,7 @@ section{
 
 .second-section{
     height: 100%;
+    margin-bottom: 30px;
 }
 
 .second-section-title{
@@ -424,6 +425,31 @@ section{
 }
 .top-blogs{
     grid-template-columns: repeat(1, 1fr);
+    margin-bottom: auto;
+}
+
+.blog{
+
+    display: grid;
+    grid-template-rows: repeat(2,1fr);
+    justify-items: left;
+}
+
+.blog-info{
+    margin-left: 0;
+    padding-right: 10px;
+}
+
+.blog-2 .blog-info{
+    width: 80%;
+}
+
+.blog-3 .blog-info{
+    width: 90%;
+}
+
+.blog-4 .blog-info .blog-title{
+    width: 100%;
 }
 
 .latest-courses{
