--- a/css/style.css
+++ b/css/style.css
@@ -405,6 +405,7 @@ section{
 }
 .section-title{
     text-align: center;
+    margin-left: 0;
 }
 
 
@@ -419,6 +420,10 @@ section{
 }
 
 
+.section-title-2{
+    margin-left: 0;
+}
+
 .top-players{
 
     grid-template-columns: repeat(1, 1fr);
@@ -429,29 +434,43 @@ section{
     flex-direction: column;
 }
 .top-blogs{
+    display: grid;
     grid-template-columns: repeat(1, 1fr);
     margin-bottom: auto;
+    margin-left: 0;
 }
 
 .blog{
 
     display: grid;
     grid-template-rows: repeat(2,1fr);
-    justify-items: left;
+    border-radius: 12px;
+    background: #ffffff;
+    filter: drop-shadow(15px 5.34229px 13.3557px rgba(0, 0, 0, 0.05));
+    margin-bottom: 22px;
+    margin: auto;
+}
+
+.blog-photo{
+    margin-top: 15px;
 }
 
 .blog-info{
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+    width: 260px;
     margin-left: 0;
+    padding-left: 20px;
     padding-right: 10px;
 }
 
-.blog-2 .blog-info{
+/* .blog-2 .blog-info{
     width: 80%;
 }
 
 .blog-3 .blog-info{
     width: 90%;
-}
+} */
 
 .blog-4 .blog-info .blog-title{
     width: 100%;
@@ -464,7 +483,5 @@ section{
 .course-box{
     margin-bottom: 30px;
 }
-
-
 
 }
